tests/snapshots/import_system__import_ctr_syntax.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/import_system/import_ctr_syntax.bend
---
λa (a lib/ctr_type/Ctr/Foo/tag 2 3)
