tests/snapshots/import_system__import_main.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/import_system/import_main.bend
---
[4m[1m[31mErrors:[0m
Can not import the entry point of the program.
