tests/snapshots/import_system__import_type.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/import_system/import_type.bend
---
λa (a lib/MyOption/MyOption/Some/tag (1, 2))
