tests/snapshots/import_system__import_types.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/import_system/import_types.bend
---
lib/types/Bool/False
