tests/snapshots/import_system__imports_alias.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/import_system/imports_alias.bend
---
3
