tests/snapshots/import_system__imports_alias_shadow.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/import_system/imports_alias_shadow.bend
---
[4m[1m[31mErrors:[0m
The import 'lib/nums/two' shadows the imported name 'lib/nums/one'
