tests/snapshots/import_system__imports_conflict.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/import_system/imports_conflict.bend
---
[4m[1m[31mErrors:[0m
[1mDuring execution :[0m
The imported definition 'lib/a/b/C' conflicts with the definition 'lib/a/b/C'.
The imported constructor 'lib/a/b/C' conflicts with the definition 'lib/a/b/C'.
