tests/snapshots/import_system__imports_file_and_dir.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/import_system/imports_file_and_dir.bend
---
(1, (3, 4))
