tests/snapshots/import_system__imports_shadow.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/import_system/imports_shadow.bend
---
[4m[1m[31mErrors:[0m
[1mDuring execution :[0m
The import 'lib/myFun/myFun' shadows the imported name 'lib/folder/myFun/myFun'
